--- a/style.css
+++ b/style.css
@@ -22,6 +22,18 @@ h1 {
      font-size: 10vh;
      text-align: center;
      cursor: pointer;
+
+
+     /* use this for diagonal line once game is won */
+     /* background: 
+       linear-gradient(to top left,
+           rgba(0,0,0,0) 0%,
+           rgba(0,0,0,0) calc(50% - 2px),
+           rgba(0,0,0,1) 50%,
+           rgba(0,0,0,0) calc(50% + 2px),
+           rgba(0,0,0,0) 100%); */
+
+    /* background:linear-gradient(to bottom right, transparent calc(50% - 1px),  black calc(50% + 1px), black 50%, transparent 50%); */
  }
  #board > div:nth-child(3n-1){
     border-left: 3px solid black;
