--- a/style.css
+++ b/style.css
@@ -36,6 +36,35 @@ h1 {
 
     /* background:linear-gradient(to bottom right, transparent calc(50% - 1px),  black calc(50% + 1px), black 50%, transparent 50%); */
  }
+
+.horizontalWin{
+    background: 
+    linear-gradient(to bottom,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) calc(50% - 2px),
+        rgba(0,0,0,1) 50%,
+        rgba(0,0,0,0) calc(50% + 2px),
+        rgba(0,0,0,0) 100%);
+}
+.verticalWin{
+    background: 
+    linear-gradient(to left,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) calc(50% - 2px),
+        rgba(0,0,0,1) 50%,
+        rgba(0,0,0,0) calc(50% + 2px),
+        rgba(0,0,0,0) 100%);
+}
+.diagonalWin{
+    background: 
+    linear-gradient(to top left,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0) calc(50% - 2px),
+        rgba(0,0,0,1) 50%,
+        rgba(0,0,0,0) calc(50% + 2px),
+        rgba(0,0,0,0) 100%);
+}
+
  #board > div:nth-child(3n-1){
     border-left: 3px solid black;
     border-right: 3px solid black;
