--- a/style.css
+++ b/style.css
@@ -87,11 +87,26 @@ h1 {
     background-color: white;
     border: 1px black solid;
     border-radius: 4px;
+    padding: 2rem;
     text-align: center;
     position: fixed;
     top: 20%;
     left: 30%;
     z-index: 2;
+ }
+ .modal ul{
+     margin-top: 0px;
+     margin-bottom: 0px;
+     text-align: justify;
+ }
+ .modal h3{
+     margin-bottom: 0.25em;
+ }
+ .modal h2{
+     margin-top: 0px;
+ }
+ .modal li{
+     margin-top: 0.2rem;
  }
  .overlay{
      position: fixed;
