--- a/style.css
+++ b/style.css
@@ -121,3 +121,8 @@ h1 {
  .hidden{
      display: none;
  }
+ .wins{
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+ }
